# PIGAN

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  reverse.py  reverse_config.toml
configs/lab/: injection-detector-30b-large.toml  injection-detector-30b.toml  injection-detector-4b-large.toml  injection-detector.toml  injection-trainer-4b-hard-b64.toml  injection-trainer-4b-hard.toml  injection-trainer-4b-medium-b64.toml  injection-trainer-4b-medium.toml  injection-trainer-b64.toml  injection-trainer-hard-b64.toml  injection-trainer-hard.toml  injection-trainer-sandbox-easy.toml  injection-trainer.toml
configs/lab/injection-detector/: injection-detector-30b.toml  injection-detector-easy.toml  injection-detector-llama-1b.toml  injection-detector-llama-3b.toml  injection-detector-qwen-0.6b.toml  injection-detector-qwen-4b-thinking.toml  injection-detector-smollm-3b.toml  injection-detector-trinity-mini.toml  injection-detector.toml
configs/lab/injection-trainer/: injection-trainer-235b-hard.toml  injection-trainer-235b.toml  injection-trainer-30b-sandbox-easy.toml  injection-trainer-4b-hard-b64.toml  injection-trainer-4b-hard.toml  injection-trainer-4b-medium-b64.toml  injection-trainer-4b-medium.toml  injection-trainer-b64.toml  injection-trainer-hard-b64.toml  injection-trainer-hard.toml  injection-trainer-sandbox-easy.toml  injection-trainer.toml
configs/lab/multi-agent-injection/: multi-agent-injection-2b.toml  multi-agent-injection-4b-easy.toml  multi-agent-injection-4b-medium.toml  multi-agent-injection-4b.toml  multi-agent-injection-hard.toml
configs/lab/reverse-multi-agent/: reverse-multi-agent.toml
configs/lab/trainer-ablation/: trainer-ablation-30b-hard.toml  trainer-ablation-4b-easy-filter.toml  trainer-ablation-4b-easy.toml  trainer-ablation-4b-hard.toml  trainer-ablation-4b-medium.toml
environments/injection_detector/: README.md  injection_detector.py  pyproject.toml
environments/injection_detector/utils/: __init__.py  generator.py
environments/injection_trainer/: README.md  injection_trainer.py  pyproject.toml
environments/multi_agent_injection/: multi_agent_injection.py  pyproject.toml
environments/reverse_multi_agent/: README.md  pyproject.toml  reverse_multi_agent.py
environments/trainer_ablation/: pyproject.toml  trainer_ablation.py
scripts/: collect_demonstrations.py  run_sft_pipeline.py  train_adversarial.py  train_sft_warmup.py
src/adversarial_robustness/envs/: __init__.py  detection.py  rewards.py  sandbox.py  scenario.py
src/adversarial_robustness/envs/scenarios/: presets.py
src/pigan/: __init__.py
src/pigan/envs/: __init__.py  detection.py  env.py  rewards.py  sandbox.py  scenario.py  simulation.py
src/pigan/envs/scenarios/: __init__.py  presets.py
src/pigan/envs/templates/: __init__.py  injections.py
