[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adversarial-robustness"
version = "0.1.0"
description = "Adversarial robustness training for LLM agents through prompt injection defense"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Denis Wambold", email = "deniswambold@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "peft>=0.10",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/denis/adversarial-robustness"
Repository = "https://github.com/denis/adversarial-robustness"

[tool.hatch.build.targets.wheel]
packages = ["src/adversarial_robustness"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
