[project]
name = "injection-detector"
description = "Train LLMs to detect prompt injections using classification and LLM-as-judge evaluation"
tags = ["security", "classification", "prompt-injection", "single-turn", "judge", "train", "eval"]
version = "0.1.4"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.9.post3",
    "datasets",
    "openai",  # Used via PrimeIntellect's OpenAI-compatible API
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["injection_detector.py", "pyproject.toml", "utils/"]

[tool.verifiers.eval]
num_examples = 10
rollouts_per_example = 3
