[project]
name = "trainer-ablation"
description = "Ablation study: injection_trainer with simpler multi_agent_injection prompts"
tags = ["security", "red-team", "prompt-injection", "multi-turn", "train", "eval", "ablation"]
version = "0.1.1"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.9.post3",
    "datasets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["trainer_ablation.py", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 10
rollouts_per_example = 3
